page jump fix

--- a/style.css
+++ b/style.css
@@ -110,15 +110,16 @@ header > h4 {
 }
 
 .shaun-profile-image {
-	height: auto;
+	height: 342.77px;
 	width: 350px;
 	border: 5px solid #0ba856;
 	filter: drop-shadow(0px 0px 20px #0ba856);
-	border-radius: 10px;
+	border-radius: 5%;
 }
 
 .shaun-profile-image > img {
 	max-width: 100%;
+	border-radius: 5%;
 }
 
 .social-buttons {
